force-app/main/default/objects/OrderLineItem__c/OrderLineItem__c.object-meta.xml
<CustomObject>
    <label>OrderLineItem</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>OrderLineItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OrderLineItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>