force-app/main/default/objects/OrderLineItem__c/fields/Effective_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Effective_Unit_Price__c</fullName>
    <formula>Unit_List_Price__c *  (1 - Discount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>