force-app/main/default/objects/OrderLineItem__c/fields/Total_Gross_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Gross_Price__c</fullName>
    <formula>VALUE(TEXT(VATRate__c))  *  Total_Net_Price__c+Total_Net_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Gross Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>