force-app/main/default/objects/OrderLineItem__c/fields/VATRate__c.field-meta.xml
<CustomField>
    <fullName>VATRate__c</fullName>
    <label>VATRate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VATRates</valueSetName>
    </valueSet>
</CustomField>